[tool.ruff]
line-length = 88
target-version = "py39"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "C",  # flake8-comprehensions
    "B",  # flake8-bugbear
]
ignore = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

# Add the following sections:

[project]
name = "stardust"
version = "0.0.1"
description = "AI for diagnostic labs"
requires-python = ">=3.9"
dependencies = [
    "opencv-python",
    "numpy",
    "scikit-learn",
    "joblib",
    "ruff>=0.6.7",
    "pytest==8.3.2",
    "pre-commit==3.8.0",
]

[tool.uv]
